(feat): new project entry
Adding my most recent project entry

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -37,6 +37,15 @@ const TAGS = {
 }
 const PROJECTS = [
   {
+    title: "David's Sports Store - E-commerce",
+    description:
+      "A full-stack e-commerce application built with Next.js, Tailwind CSS and Shadcn/ui. It features a product catalog, shopping cart, and user auth with Clerk.",
+    link: "https://sports-store-five.vercel.app/",
+    github: "https://github.com/DavidBurgos7/sports-store",
+    image: "/projects/sportsstore.webp",
+    tags: [TAGS.NEXT, TAGS.TAILWIND],
+  },
+  {
     title: "WORK IN PROGRESS - ORION POS",
     description:
       "This project is currently a WIP and will be released soon. It's a POS system for small businesses. It's built with Next.js.",
